[gd_scene load_steps=34 format=3 uid="uid://bqqgyqafm7xwp"]

[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="1_ahusb"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_onms2"]
[ext_resource type="Script" path="res://scripts/view.gd" id="5_bg0fr"]
[ext_resource type="Texture2D" uid="uid://cx8lcorkfu7ti" path="res://sprites/texture_01.png" id="5_o7dvy"]
[ext_resource type="PackedScene" uid="uid://440rqsqg6bur" path="res://objects/boss.tscn" id="6_clu5s"]
[ext_resource type="PackedScene" uid="uid://coebog4yvxamu" path="res://objects/swappable_object.tscn" id="9_enp3u"]
[ext_resource type="FontFile" uid="uid://clh3ck04e0cbq" path="res://fonts/CfPeruAdventureRegular-xO5R.ttf" id="9_vthv5"]
[ext_resource type="Texture2D" uid="uid://s2wj1v86o6i" path="res://ui_assets/boss_health_bar/health_bar_under(2).png" id="10_2yj5e"]
[ext_resource type="Script" path="res://scripts/replay_hud.gd" id="10_m5xe4"]
[ext_resource type="Texture2D" uid="uid://bik2dq12xgs27" path="res://ui_assets/boss_health_bar/left_decoration_health_bar_over.png" id="10_sibkq"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="10_wxsm4"]
[ext_resource type="Texture2D" uid="uid://clbfjegw7uytd" path="res://ui_assets/boss_health_bar/health_bar_over_no_decoration.png" id="11_alvg0"]
[ext_resource type="Texture2D" uid="uid://omitc1l8y6cg" path="res://ui_assets/boss_health_bar/health_bar_progress(2).png" id="12_pui74"]
[ext_resource type="Texture2D" uid="uid://bf24jaschky3j" path="res://ui_assets/replay_button/replay_button_normal(1).png" id="12_rjwxu"]
[ext_resource type="Texture2D" uid="uid://dn8pjgrhai4p5" path="res://ui_assets/replay_button/button_replay_pressed(1).png" id="13_1itfd"]
[ext_resource type="PackedScene" uid="uid://dy017k58p20sk" path="res://objects/cloud.tscn" id="13_drtpy"]
[ext_resource type="Texture2D" uid="uid://cjxnqieglkyoh" path="res://ui_assets/replay_button/button_replay_hover(1).png" id="14_flgyp"]
[ext_resource type="Texture2D" uid="uid://cgqrfvtnr2tfa" path="res://ui_assets/boss_health_bar/right_decoration_health_bar_over.png" id="14_rydei"]
[ext_resource type="Texture2D" uid="uid://qhf3lm184gmp" path="res://ui_assets/player_health_bar/swappable_cooldown_final.png" id="15_lidip"]
[ext_resource type="Texture2D" uid="uid://cnbasquae1c12" path="res://ui_assets/player_health_bar/health_bar_player_under.png" id="16_swi37"]
[ext_resource type="Texture2D" uid="uid://n010nhgqhbwy" path="res://ui_assets/player_health_bar/health_bar_player_normal_progress.png" id="16_u8slq"]
[ext_resource type="Texture2D" uid="uid://b6rp4esf0id2c" path="res://ui_assets/player_health_bar/health_bar_player_normal.png" id="16_uq0nh"]
[ext_resource type="Texture2D" uid="uid://cj4f54vamwy4" path="res://ui_assets/player_health_bar/health_bar_player_decoration.png" id="17_5mmak"]
[ext_resource type="Texture2D" uid="uid://dv3f0gbj5w5kw" path="res://sprites/hurted.png" id="20_uwp2t"]
[ext_resource type="Script" path="res://scripts/debug_hud.gd" id="25_pkcod"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3rtad"]
radius = 0.1
height = 0.2

[sub_resource type="BoxMesh" id="BoxMesh_yohtx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_882bd"]
albedo_texture = ExtResource("5_o7dvy")
uv1_scale = Vector3(50, 50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_kvofp"]

[sub_resource type="LabelSettings" id="LabelSettings_yrr27"]
font = ExtResource("9_vthv5")
font_size = 50
font_color = Color(0.623529, 0.894118, 0.768627, 1)
outline_size = 2
outline_color = Color(0, 0.439216, 0.756863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bhott"]
font_size = 150
outline_size = 4
outline_color = Color(1, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_16yup"]
font_names = PackedStringArray("URW Gothic")

[sub_resource type="Theme" id="Theme_io7gs"]
default_font = SubResource("SystemFont_16yup")

[node name="Main" type="Node3D"]

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_ahusb")

[node name="Player" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_onms2")]
transform = Transform3D(-0.000733197, 0, -1, 0, 1, 0, 1, 0, -0.000733197, 0, 0.5, 1)
view = NodePath("../View")
movement_speed = 300
sword_damage = 50

[node name="Marker" type="MeshInstance3D" parent="." groups=["decor"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.893314, 0.583551, 0)
visible = false
mesh = SubResource("CapsuleMesh_3rtad")

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, 0, 0.707106, 0, 1, 0, -0.707107, 0, 0.707106, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../Player")
distance = 11
height = 14
freeze_time = 0.3

[node name="Camera" type="Camera3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93346, 4.04577)
current = true
fov = 50.0

[node name="StudioListener3D" type="StudioListener3D" parent="View/Camera"]

[node name="CameraFreezeTimer" type="Timer" parent="View/Camera"]
one_shot = true

[node name="World" type="Node3D" parent="."]
visible = false

[node name="cube8" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5495, 12.5517, -2.666)

[node name="cube9" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.27593, -0.401864, 0.422933, 0.471408, 1.30937, -0.178025, -0.343721, 0.304009, 1.32582, 3.33538, 12.8158, -4.1932)

[node name="cube10" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.32811, 0.370441, 0.259369, -0.293866, 1.3186, -0.37854, -0.34372, 0.30401, 1.32582, -10.5752, 13.4825, -7.93707)

[node name="cube11" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(0.476646, 0.924607, 0.941422, -0.929853, 0.945559, -0.457882, -0.93624, -0.468385, 0.934042, -11.1815, 13.4825, 9.2812)

[node name="cube12" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -10.9158, 14.2394, 11.515)

[node name="cube13" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -14.3045, 13.4825, -8.24191)

[node name="cube14" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -15.866, 13.4825, 7.83702)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="Ground" type="Node3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_yohtx")
surface_material_override/0 = SubResource("StandardMaterial3D_882bd")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/MeshInstance3D" groups=["decor"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_kvofp")

[node name="Boss" parent="." node_paths=PackedStringArray("target") instance=ExtResource("6_clu5s")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.5, -4.70524)
movement_speed = 3
target = NodePath("../Player")
MELEE_RANGE = 3.0
JUMPING_RANGE = 7
AIMING_TIME = 0.5
PREPARE_JUMP_TIME = 0.4
STUN_TIME = 3.0

[node name="SwapObject" type="Node3D" parent="."]

[node name="swappable_object2" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 10.4389, 0.498065, 0)
player = NodePath("../../Player")

[node name="swappable_object" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.509874, 10.0378)
player = NodePath("../../Player")

[node name="swappable_object3" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.520863, -19.7149)
player = NodePath("../../Player")

[node name="swappable_object4" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -13.0021, 0.520863, -19.7149)
player = NodePath("../../Player")

[node name="swappable_object5" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.520863, 2.03134)
player = NodePath("../../Player")

[node name="swappable_object6" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 14.6833, 0.520863, -19.7149)
player = NodePath("../../Player")

[node name="swappable_object7" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -6.66515, 0.520863, -5.02327)
player = NodePath("../../Player")

[node name="swappable_object8" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 7.71531, 0.520863, -14.9947)
player = NodePath("../../Player")

[node name="swappable_object9" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 15.6289, 0.520863, -10.4402)
player = NodePath("../../Player")

[node name="swappable_object10" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 5.32472, 0.520863, 6.60032)
player = NodePath("../../Player")

[node name="swappable_object11" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -6.70286, 0.520863, 5.72477)
player = NodePath("../../Player")

[node name="GameHud" type="CanvasLayer" parent="."]
script = ExtResource("10_wxsm4")
cooldown_color = Color(0.258824, 0.537255, 0.933333, 0.968627)

[node name="Boss" type="Control" parent="GameHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameHud/Boss"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
alignment = 1

[node name="BossNameLabel" type="Label" parent="GameHud/Boss/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("9_vthv5")
theme_override_font_sizes/font_size = 100
text = "TEZCATLIPOCA"
label_settings = SubResource("LabelSettings_yrr27")
uppercase = true

[node name="LifeBarHBox" type="HBoxContainer" parent="GameHud/Boss/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="LeftDecoration" type="TextureRect" parent="GameHud/Boss/VBoxContainer/LifeBarHBox"]
layout_mode = 2
texture = ExtResource("10_sibkq")

[node name="BossLifeBar" type="TextureProgressBar" parent="GameHud/Boss/VBoxContainer/LifeBarHBox"]
layout_mode = 2
size_flags_horizontal = 4
step = 0.01
value = 100.0
texture_under = ExtResource("10_2yj5e")
texture_over = ExtResource("11_alvg0")
texture_progress = ExtResource("12_pui74")

[node name="RightDecoration" type="TextureRect" parent="GameHud/Boss/VBoxContainer/LifeBarHBox"]
layout_mode = 2
texture = ExtResource("14_rydei")

[node name="Player" type="Control" parent="GameHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="LifeBarHBox" type="HBoxContainer" parent="GameHud/Player"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -100.0
offset_right = 303.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_constants/separation = 0

[node name="SwappableInfo" type="TextureRect" parent="GameHud/Player/LifeBarHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("15_lidip")

[node name="PlayerLifeBar" type="TextureProgressBar" parent="GameHud/Player/LifeBarHBox"]
layout_mode = 2
size_flags_vertical = 4
step = 0.01
value = 100.0
texture_under = ExtResource("16_swi37")
texture_over = ExtResource("16_uq0nh")
texture_progress = ExtResource("16_u8slq")

[node name="RightDecoration" type="TextureRect" parent="GameHud/Player/LifeBarHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("17_5mmak")

[node name="VFX" type="Control" parent="GameHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="BloodTexture" type="TextureRect" parent="GameHud/VFX"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_uwp2t")
expand_mode = 1

[node name="BloodTime" type="Timer" parent="GameHud/VFX"]
wait_time = 0.5

[node name="ReplayHud" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("10_m5xe4")

[node name="VBoxContainer" type="VBoxContainer" parent="ReplayHud"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -25.0
offset_right = 6.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReplayLabel" type="Label" parent="ReplayHud/VBoxContainer"]
modulate = Color(0.704553, 0.69936, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_vthv5")
theme_override_font_sizes/font_size = 80
text = "GAME OVER"
label_settings = SubResource("LabelSettings_bhott")

[node name="TextureButton" type="TextureButton" parent="ReplayHud/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 10.0
mouse_filter = 1
texture_normal = ExtResource("12_rjwxu")
texture_pressed = ExtResource("13_1itfd")
texture_hover = ExtResource("14_flgyp")
stretch_mode = 0

[node name="DebugHud" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = 3.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 1
theme = SubResource("Theme_io7gs")
script = ExtResource("25_pkcod")

[node name="ListOfDebug" type="VBoxContainer" parent="DebugHud"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/separation = 2

[node name="BossStateDebug" type="HBoxContainer" parent="DebugHud/ListOfDebug"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/ListOfDebug/BossStateDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "BOSS STATE : "

[node name="BossState" type="Label" parent="DebugHud/ListOfDebug/BossStateDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "CHASE"

[node name="SwapStateDebug" type="HBoxContainer" parent="DebugHud/ListOfDebug"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugHud/ListOfDebug/SwapStateDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "PlayerSpell : "

[node name="SwapLabel" type="Label" parent="DebugHud/ListOfDebug/SwapStateDebug"]
modulate = Color(1, 1, 0.0941176, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Swap Ready"
uppercase = true

[connection signal="hp_changed" from="Player" to="GameHud" method="_on_player_hp_changed"]
[connection signal="spell_changed" from="Player" to="GameHud" method="_on_player_spell_changed"]
[connection signal="spell_changed" from="Player" to="DebugHud" method="_on_player_spell_changed"]
[connection signal="swap_positon" from="Player" to="View" method="_on_player_swap_positon"]
[connection signal="timeout" from="View/Camera/CameraFreezeTimer" to="View" method="_on_camera_freeze_timer_timeout"]
[connection signal="hp_changed" from="Boss" to="GameHud" method="_on_boss_hp_changed"]
[connection signal="state_changed" from="Boss" to="DebugHud" method="_on_boss_state_changed"]
[connection signal="timeout" from="GameHud/VFX/BloodTime" to="GameHud" method="_on_blood_time_timeout"]
[connection signal="button_down" from="ReplayHud/VBoxContainer/TextureButton" to="ReplayHud" method="_on_texture_button_button_down"]
